--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
+body {
+  background-color: #b2aba9
+}
+.container{
+  background-color: #f2f2f2;
+  
+  width: 50%;
+  margin-left: 26%;
+  margin-top: 5%;
   text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input[type=text], select {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+input[type=passward], select {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display:inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+button{
+  width: 20%;
+  background-color: green;
+  color: white;
+  padding: 12px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 1;
+  cursor: pointer
+}
+button:hover {
+  background-attachment: #45a049;
+}
+.header{
+  width:95%;
+  background-color: rgb(7, 2, 71);
+  padding: 1px 20px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ui-define{
+  background-color: rgb(243, 240, 243);
+  margin-left: 25%;
+  width: 50%;
+  padding: 20px 30px;
+  margin-top: 5%;
 }
